--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
    <script src="./maps/perlin.js"></script>
    <script src="./maps/maps.js"></script>
    <script src="./maps/randomMapGen.js"></script>
+   <script src="./utils/collisions.js"></script>
    <script src="./units//Infantry.js"></script>
    <script src="./units/randomTroopGen.js"></script>
 
