added a bunch small stuff, fixed hitboxes, added all unit

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
    <script src="./maps/randomMapGen.js"></script>
    <script src="./utils/collisions.js"></script>
    <script src="./units//Infantry.js"></script>
+   <script src="./units//Calvary.js"></script>
+   <script src="./units//Cannon.js"></script>
+   <script src="./units//General.js"></script>
    <script src="./units/randomTroopGen.js"></script>
 
    <!-- main -->
