--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       <canvas id="canvas1"> </canvas>
    </body>
    <!-- utils -->
-   <script src="./utils/renderMap.js"></script>
    <script src="./utils/drawLine.js"></script>
    <script src="./utils/drawDestination.js"></script>
    <script src="./utils/keybinds/handleMousedown.js"></script>
@@ -21,14 +20,18 @@
 
    <!-- resources -->
    <script src="./maps/perlin.js"></script>
+   <script src="./maps/randomMapGeneration.js"></script>
+   <script src="./units/randomTroopGeneration.js"></script>
    <script src="./maps/maps.js"></script>
-   <script src="./maps/randomMapGen.js"></script>
+   <script src="./utils/renderMap.js"></script>
+   <script src="./maps/seedSorter.js"></script>
+   <script src="./maps/terrain.js"></script>
    <script src="./utils/collisions.js"></script>
    <script src="./units//Infantry.js"></script>
    <script src="./units//Calvary.js"></script>
    <script src="./units//Cannon.js"></script>
    <script src="./units//General.js"></script>
-   <script src="./units/randomTroopGen.js"></script>
+   <script src="./utils/sounds.js"></script>
 
    <!-- main -->
    <script src="./index.js"></script>
